[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/Environment/LevelGridMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Basic3D/SafetyNet.gd" type="Script" id=2]
[ext_resource path="res://assets/Player3D/Player3D.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Label3D/fontello.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Label3D/HealingArea.gd" type="Script" id=6]
[ext_resource path="res://assets/Enemy3D/NavigationEnemy3D.tscn" type="PackedScene" id=7]
[ext_resource path="res://Label3D/Label3DDemo.gd" type="Script" id=8]
[ext_resource path="res://interface/theme.tres" type="Theme" id=9]

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 3
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 43
outline_size = 3
font_data = ExtResource( 4 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 50, 1, 50 )

[sub_resource type="NavigationMesh" id=2]
vertices = PoolVector3Array( -3.5933, 0.354164, -4.59639, 3.3067, 0.354164, -4.69639, 3.3067, 0.354164, -6.29639, -3.7933, 0.354164, -6.09639, 4.6067, 0.354164, -4.19639, 4.6067, 0.354164, -3.59639, 6.1067, 0.354164, -3.69639, 3.3067, 0.354164, -6.29639, 3.3067, 0.354164, -4.69639, 4.3067, 0.354164, -4.59639, 4.3067, 0.354164, -4.59639, 4.6067, 0.354164, -4.19639, 6.1067, 0.354164, -3.69639, 6.1067, 0.354164, -6.29639, 3.3067, 0.354164, -6.29639, -4.1933, 0.354164, -4.59639, -3.5933, 0.354164, -4.59639, -3.7933, 0.354164, -6.09639, -4.6933, 0.354164, -4.09639, -4.1933, 0.354164, -4.59639, -3.7933, 0.354164, -6.09639, -6.1933, 0.354164, -2.29639, -4.6933, 0.354164, -2.39639, -4.6933, 0.354164, -4.09639, -4.6933, 0.354164, -4.09639, -3.7933, 0.354164, -6.09639, -6.0933, 0.354164, -5.99639, -6.1933, 0.354164, -2.29639, 4.3067, 0.354164, -1.49639, 3.8067, 0.354164, -1.39639, 3.8067, 0.354164, -0.696393, 4.3067, 0.354164, -1.49639, 3.8067, 0.354164, -0.696393, 4.5067, 0.354164, -0.396393, 4.6067, 0.354164, -1.89639, 6.1067, 0.354164, -3.69639, 4.6067, 0.354164, -3.59639, 4.6067, 0.354164, -1.89639, 4.5067, 0.354164, -0.396393, 4.6067, 0.354164, 0.703607, 6.2067, 0.354164, 0.603606, 6.1067, 0.354164, -3.69639, 4.6067, 0.354164, -1.89639, -4.3933, 0.354164, -0.496394, -3.4933, 0.354164, -0.596394, -3.4933, 0.354164, -1.29639, -4.3933, 0.354164, -1.39639, -4.6933, 0.354164, -1.79639, -4.6933, 0.354164, -2.39639, -6.1933, 0.354164, -2.29639, -4.6933, 0.354164, -0.0963936, -4.3933, 0.354164, -0.496394, -4.3933, 0.354164, -1.39639, -4.6933, 0.354164, -1.79639, -6.1933, 0.354164, -2.29639, -6.1933, 0.354164, 0.403606, -6.1933, 0.354164, 0.403606, -4.6933, 0.354164, 0.303607, -4.6933, 0.354164, -0.0963936, 3.4067, 0.354164, -0.596394, 3.8067, 0.354164, -0.696393, 3.8067, 0.354164, -1.39639, 3.1067, 0.354164, -0.196393, 3.4067, 0.354164, -0.596394, 3.8067, 0.354164, -1.39639, 2.1067, 0.354164, -0.696393, 2.6067, 0.354164, -0.196393, 2.7067, 0.354164, 1.40361, 3.2067, 0.354164, 1.60361, 3.1067, 0.354164, -0.196393, 2.6067, 0.354164, -0.196393, -3.4933, 0.354164, -1.29639, -3.4933, 0.354164, -0.596394, 2.1067, 0.354164, -0.696393, 3.8067, 0.354164, -1.39639, -6.1933, 0.354164, 0.403606, -6.0933, 0.354164, 5.70361, -4.5933, 0.354164, 5.60361, -4.6933, 0.354164, 0.303607, 4.6067, 0.354164, 0.703607, 4.7067, 0.354164, 5.30361, 6.3067, 0.354164, 5.30361, 6.2067, 0.354164, 0.603606, -0.293301, 0.354164, 3.40361, 0.5067, 0.354164, 3.40361, 1.3067, 0.354164, 2.20361, -3.0933, 0.354164, 4.30361, -0.593301, 0.354164, 4.40361, -0.593301, 0.354164, 3.80361, -3.0933, 0.354164, 4.30361, -0.593301, 0.354164, 3.80361, -0.293301, 0.354164, 3.40361, -0.293301, 0.354164, 3.40361, 1.3067, 0.354164, 2.20361, 1.2067, 0.354164, 0.803607, -3.1933, 0.354164, 0.903606, -3.0933, 0.354164, 4.30361, 3.2067, 0.354164, 1.60361, 2.7067, 0.354164, 1.40361, 2.7067, 0.354164, 2.10361, 3.2067, 0.354164, 1.60361, 2.7067, 0.354164, 2.10361, 2.4067, 0.354164, 2.50361, 3.2067, 0.354164, 5.10361, 1.7067, 0.354164, 2.60361, 1.3067, 0.354164, 2.20361, 0.5067, 0.354164, 3.40361, 0.906699, 0.354164, 3.80361, 2.4067, 0.354164, 2.50361, 1.7067, 0.354164, 2.60361, 0.906699, 0.354164, 3.80361, 0.906699, 0.354164, 5.20361, 3.2067, 0.354164, 5.10361, -3.3933, 0.354164, 6.60361, -3.7933, 0.354164, 6.70361, -3.7933, 0.354164, 8.30361, 0.706699, 0.354164, 8.20361, 0.706699, 0.354164, 6.60361, -0.0933008, 0.354164, 6.60361, -3.0933, 0.354164, 6.20361, -3.3933, 0.354164, 6.60361, -3.7933, 0.354164, 8.30361, 0.706699, 0.354164, 8.20361, -0.0933008, 0.354164, 6.60361, -0.493301, 0.354164, 6.30361, -0.593301, 0.354164, 4.40361, -3.0933, 0.354164, 4.30361, -3.0933, 0.354164, 6.20361, -0.493301, 0.354164, 6.30361, 4.2067, 0.354164, 6.60361, 3.6067, 0.354164, 6.60361, 3.8067, 0.354164, 8.10361, 4.6067, 0.354164, 6.30361, 4.2067, 0.354164, 6.60361, 3.8067, 0.354164, 8.10361, 6.3067, 0.354164, 8.10361, 6.3067, 0.354164, 5.30361, 6.3067, 0.354164, 5.30361, 4.7067, 0.354164, 5.30361, 4.6067, 0.354164, 6.30361, -4.4933, 0.354164, 6.40361, -4.5933, 0.354164, 5.60361, -6.0933, 0.354164, 5.70361, -3.7933, 0.354164, 8.30361, -3.7933, 0.354164, 6.70361, -4.4933, 0.354164, 6.40361, -6.0933, 0.354164, 8.30361, -3.7933, 0.354164, 8.30361, -4.4933, 0.354164, 6.40361, -6.0933, 0.354164, 5.70361, 0.706699, 0.354164, 8.20361, 3.8067, 0.354164, 8.10361, 3.6067, 0.354164, 6.60361, 0.706699, 0.354164, 6.60361 )
polygons = [ PoolIntArray( 1, 0, 2 ), PoolIntArray( 2, 0, 3 ), PoolIntArray( 6, 5, 4 ), PoolIntArray( 9, 8, 7 ), PoolIntArray( 11, 10, 12 ), PoolIntArray( 12, 10, 13 ), PoolIntArray( 13, 10, 14 ), PoolIntArray( 17, 16, 15 ), PoolIntArray( 20, 19, 18 ), PoolIntArray( 23, 22, 21 ), PoolIntArray( 25, 24, 26 ), PoolIntArray( 26, 24, 27 ), PoolIntArray( 30, 29, 28 ), PoolIntArray( 32, 31, 33 ), PoolIntArray( 33, 31, 34 ), PoolIntArray( 35, 37, 36 ), PoolIntArray( 39, 38, 40 ), PoolIntArray( 40, 38, 42 ), PoolIntArray( 40, 42, 41 ), PoolIntArray( 44, 43, 45 ), PoolIntArray( 45, 43, 46 ), PoolIntArray( 49, 48, 47 ), PoolIntArray( 51, 50, 52 ), PoolIntArray( 52, 50, 53 ), PoolIntArray( 53, 50, 55 ), PoolIntArray( 53, 55, 54 ), PoolIntArray( 58, 57, 56 ), PoolIntArray( 61, 60, 59 ), PoolIntArray( 62, 66, 63 ), PoolIntArray( 63, 66, 65 ), PoolIntArray( 63, 65, 64 ), PoolIntArray( 70, 69, 67 ), PoolIntArray( 67, 69, 68 ), PoolIntArray( 72, 71, 73 ), PoolIntArray( 73, 71, 74 ), PoolIntArray( 78, 77, 75 ), PoolIntArray( 75, 77, 76 ), PoolIntArray( 80, 79, 81 ), PoolIntArray( 81, 79, 82 ), PoolIntArray( 85, 84, 83 ), PoolIntArray( 88, 87, 86 ), PoolIntArray( 91, 90, 89 ), PoolIntArray( 93, 92, 94 ), PoolIntArray( 94, 92, 95 ), PoolIntArray( 95, 92, 96 ), PoolIntArray( 97, 99, 98 ), PoolIntArray( 101, 100, 102 ), PoolIntArray( 102, 100, 103 ), PoolIntArray( 105, 104, 106 ), PoolIntArray( 106, 104, 107 ), PoolIntArray( 109, 108, 110 ), PoolIntArray( 110, 108, 111 ), PoolIntArray( 111, 108, 112 ), PoolIntArray( 115, 114, 113 ), PoolIntArray( 118, 117, 116 ), PoolIntArray( 120, 119, 121 ), PoolIntArray( 121, 119, 124 ), PoolIntArray( 121, 124, 123 ), PoolIntArray( 121, 123, 122 ), PoolIntArray( 126, 125, 127 ), PoolIntArray( 127, 125, 128 ), PoolIntArray( 131, 130, 129 ), PoolIntArray( 133, 132, 134 ), PoolIntArray( 134, 132, 135 ), PoolIntArray( 135, 132, 136 ), PoolIntArray( 139, 138, 137 ), PoolIntArray( 142, 141, 140 ), PoolIntArray( 145, 144, 143 ), PoolIntArray( 147, 146, 148 ), PoolIntArray( 148, 146, 149 ), PoolIntArray( 153, 152, 150 ), PoolIntArray( 150, 152, 151 ) ]
cell_size = 0.1
agent_max_climb = 0.1
agent_max_slope = 12.9

[sub_resource type="BoxShape" id=5]
extents = Vector3( 3.94903, 2.08476, 2.70946 )

[node name="Label3DDemo" type="Spatial"]
script = ExtResource( 8 )

[node name="Player3D" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7.75844 )

[node name="Label3D" type="Label3D" parent="Player3D"]
offset = Vector2( 0, 200 )
modulate = Color( 0.537255, 0.121569, 1, 1 )
outline_modulate = Color( 0.917647, 0.654902, 0.980392, 1 )
text = "Ó†Å"
font = SubResource( 4 )

[node name="NavigationEnemy3D" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.02073, 0, -1.06441 )
collision_layer = 4
collision_mask = 3
navigation_path = NodePath("../Navigation")
player_path = NodePath("../Player3D")

[node name="Model" parent="NavigationEnemy3D" index="1"]
transform = Transform( 0.896718, 0, -0.442602, 0, 1, 0, 0.442602, 0, 0.896718, 0, 0, 0 )

[node name="Label3D" type="Label3D" parent="NavigationEnemy3D"]
cast_shadow = 0
offset = Vector2( 0, 150 )
no_depth_test = true
render_priority = 2
outline_render_priority = 1
text = "Player 2"
font = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.707107, 0.5, 0.5, 0, -0.707107, 0.707107, 0.707107, -0.5, -0.5, 0, 10, 0 )
shadow_enabled = true
shadow_bias = 0.05
directional_shadow_blend_splits = true
directional_shadow_normal_bias = 0.2
directional_shadow_max_distance = 50.0

[node name="SafetyNet" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.47564, 0 )
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="SafetyNet"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0164833, 4.57253, 0 )
shape = SubResource( 1 )

[node name="Navigation" type="Navigation" parent="."]

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]
navmesh = SubResource( 2 )

[node name="LevelGridMap" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 1 )]
transform = Transform( 0.999873, -0.00399479, 0.0154323, 0.00396344, 0.99999, 0.00206134, -0.0154404, -0.00199991, 0.999879, 0, 0, 0 )
data = {
"cells": PoolIntArray( 0, 0, 1048615, 1, 0, 1048614, 65533, 0, 1441792, 65534, 0, 655399, 65535, 0, 655398, -65536, 0, 9, -65535, 0, 1441807, -65534, 0, 9, -65533, 0, 10, -4, 0, 655370, -3, 0, 9, -2, 0, 9, -1, 0, 9, 1, 1, 1048614, 65534, 1, 1441830, 65535, 1, 1441792, -65536, 1, 9, -65535, 1, 9, -65534, 1, 9, -65533, 1, 10, -4, 1, 655370, -3, 1, 9, -2, 1, 9, -1, 1, 9, 0, 2, 1441831, 1, 2, 39, 2, 2, 2, 65534, 2, 1441830, -65536, 2, 9, -65535, 2, 9, -65534, 2, 9, -65533, 2, 10, -4, 2, 655370, -3, 2, 9, -2, 2, 9, -1, 2, 9, 2, 3, 1441793, -65536, 3, 9, -65535, 3, 9, -65534, 3, 9, -65533, 3, 10, -4, 3, 655370, -3, 3, 1441807, -2, 3, 9, -1, 3, 9, 65532, 4, 1441835, -65536, 4, 1441802, -65535, 4, 1441802, -65534, 4, 1441802, -65533, 4, 8, -4, 4, 1441806, -3, 4, 1441808, -2, 4, 1441802, -1, 4, 1441802, -65536, 65532, 1048586, -65535, 65532, 1048586, -65534, 65532, 1048586, -65533, 65532, 1048584, -4, 65532, 655368, -3, 65532, 1048586, -2, 65532, 1048586, -1, 65532, 1048586, -65536, 65533, 9, -65535, 65533, 9, -65534, 65533, 9, -65533, 65533, 10, -4, 65533, 655370, -3, 65533, 9, -2, 65533, 9, -1, 65533, 9, 0, 65534, 29, 1, 65534, 29, 65534, 65534, 29, 65536, 65534, 29, 131070, 65534, 29, 131071, 65534, 29, -65536, 65534, 9, -65535, 65534, 9, -65534, 65534, 9, -65533, 65534, 10, -4, 65534, 655370, -3, 65534, 9, -2, 65534, 9, -1, 65534, 9, 65533, 65535, 0, -65536, 65535, 9, -65535, 65535, 1441807, -65534, 65535, 9, -65533, 65535, 10, -4, 65535, 655370, -3, 65535, 9, -2, 65535, 9, -1, 65535, 9 )
}

[node name="HealingArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.13865 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="HealingArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.86851, 0 )
shape = SubResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
margin_right = 175.0
margin_bottom = 90.0
theme = ExtResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
margin_right = 243.0
margin_bottom = 144.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 223.0
margin_bottom = 124.0

[node name="BillboardCheckBox" type="CheckBox" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 203.0
margin_bottom = 42.0
text = "Billboard"

[node name="DepthTestCheckBox" type="CheckBox" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 203.0
margin_bottom = 104.0
text = "No Depth Test"

[editable path="NavigationEnemy3D"]
